--- a/styles/player.css
+++ b/styles/player.css
@@ -2999,7 +2999,7 @@ li.slick-active {
 }
 
 .react-select__control {
-    cursor: pointer;
+    cursor: pointer !important;
     display: flex;
     justify-content: space-between;
     padding      : 8px 16px 8px 24px !important;
