--- a/styles/player.css
+++ b/styles/player.css
@@ -3165,7 +3165,7 @@ flex-grow: 1;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     box-sizing: border-box;
  }
- .select-options li.active-option {
+ .select-options li.active-option,  .select-options li:hover {
      color: var(--primary);
  }
  
