--- a/styles/style.css
+++ b/styles/style.css
@@ -1330,6 +1330,12 @@
     margin-top: 50px;
     margin-left: 64px;
 }
+.Generic_resetBtn svg path {
+    transition: fill .3s ease;    fill: var(--text-gray);
+}
+.Generic_resetBtn:hover svg path {
+    fill:var(--primary);
+}
 
 .Generic_resetBtn p{
     text-transform: none; 
@@ -3300,7 +3306,9 @@
 
 .About_documentsTitle {
     margin-right : 20px;
-    margin-bottom: 0 !important
+    margin-bottom: 0 !important;
+    min-width          : 35%;
+    text-align: left !important;
 }
 
 .About_documentsFooter {
@@ -3694,8 +3702,16 @@
 }
 
 .InfoPage_rightButton {
-    margin-top: 40px;
+    margin-top: 80px;
     width     : 100%
+}
+
+@media (max-width: 1539px) {
+    .InfoPage_rightButton {
+        margin-top: 25px;
+
+    }
+    
 }
 
 .InfoPage_infoHeadBlockThird h3,
@@ -3785,7 +3801,7 @@
     display            : flex;
     justify-content    : space-between;
     align-items        : center;
-    padding            : 60px;
+    padding            : 30px 60px 60px;
     box-sizing         : border-box;
     background-image   : url(../assets/ellipse_card_with_icons.svg);
     background-size    : 30%;
@@ -3908,7 +3924,7 @@
 
 @media (max-width:1300px) {
     .InfoPage_benefitWrapper {
-        padding: 60px 40px
+        padding: 20px 40px 60px 40px
     }
 }
 
@@ -5704,7 +5720,7 @@
     }
 }
 
-@media screen and (max-width:1634px) {
+@media screen and (max-width:1334px) {
     .Default_defaultContainer {
         padding-left : 24px;
         padding-right: 24px
@@ -6856,7 +6872,8 @@
     padding    : 3px;
     margin-left: auto;
     cursor     : pointer;
-    line-height: 0
+    line-height: 0;
+    right: -10px;
 }
 
 @media screen and (max-width:820px) {
