--- a/styles/style.css
+++ b/styles/style.css
@@ -1410,8 +1410,8 @@
     }
 
     .Default_defaultContainer {
-        padding-left : 20px;
-        padding-right: 20px
+        padding-left : 17px;
+        padding-right: 17px
     }
 }
 
@@ -5737,8 +5737,8 @@
     }
 
     .Default_defaultContainer {
-        padding-left : 20px;
-        padding-right: 20px
+        padding-left : 17px;
+        padding-right: 17px
     }
 }
 
@@ -5892,12 +5892,21 @@
     justify-content : flex-start;
     align-items     : center;
     margin          : 120px 0;
-    padding         : 0 120px;
-    box-sizing      : border-box
+    padding: 40px 70px;
+    box-sizing      : border-box;
+    gap: 90px;
 }
 
 .Review_block {
+    position: relative;
     width: 60%
+}
+
+.Review_block::before {
+    content: url(../assets/quote.svg);
+    position: absolute;
+    top: -5px;
+
 }
 
 .Review_blockImg {
@@ -5974,7 +5983,7 @@
     font-weight: 600;
     font-size  : 22px;
     line-height: 33px;
-    margin-left: 24px
+    margin-left: 64px
 }
 
 .Review_withReadMore {
@@ -5983,7 +5992,7 @@
     text-overflow     : ellipsis;
     display           : -webkit-box;
     -webkit-line-clamp: 6;
-    -webkit-box-orient: vertical
+    -webkit-box-orient: vertical;
 }
 
 .Review_button {
@@ -5997,16 +6006,30 @@
     line-height: 56px;
 }
 
+.Review_wrapper .Generic_iconRoot p,
+.MiniFeedback_root .Generic_iconRoot p {
+    font-size: 20px;
+    font-weight: 600;
+}
+
+
+
 @media (max-width:1300px) {
     .Review_wrapper {
-        padding: 0 40px
+        padding: 40px 70px;
+        flex-direction: column;
+    }
+
+    .Review_block {
+        width: 80%;
     }
 }
 
 @media (max-width:1080px) {
     .Review_wrapper {
         flex-direction: column;
-        padding       : 0
+        padding       : 40px 70px;
+        gap: 40px;
     }
 
     .Review_blockImg img {
@@ -6016,13 +6039,15 @@
     }
 
     .Review_blockImg {
-        max-width: 308px
+        max-width: 460px;
+    }
+
+    .Review_block {
+        width: 90%;
     }
 
     .Review_blockImg,
     .Review_block {
-        width  : 100%;
-        margin : 24px auto;
         padding: 0 40px
     }
 
@@ -6033,28 +6058,111 @@
     }
 
     .Review_titleBlock {
-        width   : 255px;
-        height  : 90px;
         position: absolute;
         bottom  : 0;
         right   : 60px
     }
 
+    .Review_titleBlock {
+        left: 20px;
+    }
+
     .Review_title {
-        font-size  : 24px;
+        font-size  : 27px;
         line-height: 150%;
         top        : 60%;
         left       : 50%;
         transform  : translate(-50%, -50%)
     }
+
+    .Review_mask {
+        width: 100%;
+    }
+
+    .Review_insideImage {
+        width: 100% !important;
+    }
+}
+
+@media (max-width:900px) {
+    .Review_text  {
+        font-size: 15px;
+        line-height: 19px;
+    }
+
+    .Review_blockImg {
+        margin-bottom: 0;
+    }
+
+    .Review_withReadMore {
+        -webkit-line-clamp: 8;
+    }
+
+    .Review_block::before {
+        top: -10px;
+    }
+    
+}
+
+@media (max-width:750px) {
+    .Review_wrapper {
+        padding       : 30px 20px;
+    }
+
+    .Review_block {
+        width: 100%;
+        padding: 0;
+    }
+
+    .Review_block img {
+        margin-top: 5px;
+    }
+
+    .Review_block .Generic_iconRoot.Review_btn {
+        margin-left: 17px !important;
+        margin-top: 10px !important;
+    }
+
+    .Review_text {
+        margin-left: 30px;
+    }
+
+    .Review_titleBlock {
+        background-image : url(../assets/title_back-small.png);
+    }
+
+    .Review_blockImg.Review_insideImage {
+        margin-left: 0px;
+    }
+
+    .Review_block::before {
+        content: url(../assets/quote-small.png);
+        top: 0;
+    
+    }
+    
 }
 
 @media (max-width:500px) {
 
     .Review_blockImg,
+    .Review_blockImg img,
     .Review_block {
-        padding: 0 20px
+        padding: 0;
     }
+
+    .Review_wrapper .Generic_iconRoot p {
+        padding-left: 10px;
+    }
+
+    .Review_titleBlock {
+        left: 50%;
+        transform: translate(-50%);
+        width: 355px;
+        height: 90px;
+    }
+    
+    
 }
 
 .MiniFeedback_root {
