change styles for review block in feedback page

--- a/styles/style.css
+++ b/styles/style.css
@@ -6129,6 +6129,8 @@
 
     .Review_titleBlock {
         background-image : url(../assets/title_back-small.png);
+        left: 50%;
+        transform: translate(-50%);
     }
 
     .Review_blockImg.Review_insideImage {
@@ -6140,7 +6142,8 @@
         top: 0;
     
     }
-    
+
+   
 }
 
 @media (max-width:500px) {
@@ -6149,6 +6152,10 @@
     .Review_blockImg img,
     .Review_block {
         padding: 0;
+    }
+
+    .Review_blockImg {
+        padding-left: 20px;
     }
 
     .Review_wrapper .Generic_iconRoot p {
@@ -6161,9 +6168,34 @@
         width: 355px;
         height: 90px;
     }
-    
-    
 }
+
+@media (max-width:413px) {
+    .Review_titleBlock {
+        bottom: -20px;
+        width: 300px;
+        height: 90px;
+        background-size: contain;
+    }
+    
+    .Review_title {
+        font-size: 24px;
+        padding-bottom: 20px;
+    }
+
+    .Review_blockImg {
+        padding-left: 0;
+    }
+
+    .Review_mask {
+        width: 280px;
+        height: 280px;
+    }
+
+    .Review_insideImage {
+        height: auto !important;
+    }
+} 
 
 .MiniFeedback_root {
     background    : var(--background-white);
