--- a/styles/common.css
+++ b/styles/common.css
@@ -291,6 +291,16 @@
     padding        : 0 30px
 }
 
+@media (max-width: 1339px) {
+    .Header_headerRoot {
+    min-height     : 90px;
+    max-height     : 90px;
+}
+.headroom-wrapper {
+    height: 90px;
+}
+}
+
 .Header_headerLogo {
     margin    : auto 90px auto 0;
     transition: all .1s ease-in-out
