--- a/styles/player.css
+++ b/styles/player.css
@@ -3127,12 +3127,12 @@ flex-grow: 1;
     margin-bottom: 0 ;
     padding      : 0 4px ;
     background   : var(--white) ;
-    box-shadow   : 0 40px 64px rgba(0, 0, 0, .06), 0 20px 24px rgba(0, 0, 0, .04), 0 12px 16px rgba(0, 0, 0, .04), 0 8px 8px rgba(0, 0, 0, .04), 0 4px 4px rgba(0, 0, 0, .04), 0 2px 2px rgba(0, 0, 0, .02) !important;
+    /* box-shadow   : 0 40px 64px rgba(0, 0, 0, .06), 0 20px 24px rgba(0, 0, 0, .04), 0 12px 16px rgba(0, 0, 0, .04), 0 8px 8px rgba(0, 0, 0, .04), 0 4px 4px rgba(0, 0, 0, .04), 0 2px 2px rgba(0, 0, 0, .02) !important; */
     overflow-y   : scroll;
     top: 100%;
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 0px 1px, rgba(0, 0, 0, 0.1) 0px 4px 11px;
+    /* box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 0px 1px, rgba(0, 0, 0, 0.1) 0px 4px 11px; */
     margin-bottom: 8px;
     margin-top: 8px;
     position: absolute;
