--- a/styles/style.css
+++ b/styles/style.css
@@ -5501,11 +5501,34 @@
     position    : sticky;
     height      : -moz-min-content;
     height      : min-content;
-    top         : 150px;
+    top         : 120px;
     left        : 0;
     margin-right: 20px;
     width       : 100%;
-    max-width   : 304px
+    max-width   : 304px;
+}
+
+@media (max-width: 1339px) {
+    
+.Families_leftSide {
+    top         : 100px;
+}
+}
+
+@media (min-width: 1083px) {
+    .Families_leftSide {
+    
+        max-height: calc(100vh - 100px);
+        overflow-y: auto;
+        padding-bottom: 20px;
+        padding-right: 10px;
+    }
+}
+@media (min-width: 1339px) {
+    .Families_leftSide {
+    
+        max-height: calc(100vh - 120px);
+    }
 }
 
 .Families_rightSide {
@@ -5845,14 +5868,40 @@
     height      : -moz-min-content;
     height      : min-content;
     min-height  : 20vh;
-    top         : 150px;
+    top         : 120px;
     left        : 0;
     margin-right: 20px;
     width       : 340px;
     max-width   : 340px;
-    flex-shrink : 0
+    flex-shrink : 0;
+
 }
 
+@media (max-width: 1339px) {
+    
+.Families_leftSide {
+    top         : 100px;
+}
+}
+
+@media (min-width: 1083px) {
+    
+.Catalog_leftSide {
+
+    max-height: calc(100vh - 110px);
+    overflow-y: auto;
+    padding-bottom: 20px;
+    /* margin-right: -10px; */
+    padding-right: 10px;
+}
+}
+
+@media (min-width: 1339px) {
+    
+    .Families_leftSide {
+        max-height: calc(100vh - 120px);
+    }
+    }
 .Catalog_rightSide {
     max-width     : 1200px;
     display       : flex;
